--- a/styles/room.module.css
+++ b/styles/room.module.css
@@ -6,6 +6,24 @@
   margin-bottom: 16px;
 }
 
+.copy_link {
+  background-color: #d3d3d3;
+  box-shadow: 0 5px 0 #545454;
+  padding: 0.5em 1em;
+  position: relative;
+  text-decoration: none;
+}
+
+.copy_link:hover {
+  background-color: #a1a1a1;
+  cursor: pointer;
+}
+
+.copy_link:active {
+  box-shadow: none;
+  top: 5px;
+}
+
 .square {
   width: 104px;
   height: 104px;
